--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "google-trends-api": "^4.9.2",
     "jsonwebtoken": "^9.0.2",
     "jssha": "^3.3.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
