--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "google-trends-api": "^4.9.2",
